[tool.poetry]
package-mode = false
name = "machine_learning_workshop"
description = "A guide to machine learning, covering core concepts, algorithms, and practical applications using scikit-learn."
authors = ["Amirhossein Heydari <amirhosseinheydari78@gmail.com>"]
maintainers = ["Amirhossein Heydari <amirhosseinheydari78@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/mr-pylin/machine-learning-workshop"
keywords = ["scikit-learn", "sklearn", "machine learning", "neural networks"]
readme = "README.md"

[tool.poetry.urls]
"Amirhossein Heydari Homepage" = "https://mr-pylin.github.io"

[tool.poetry.dependencies]
python = "3.13.1"
ipykernel = "^6.30.0"
ipywidgets = "^8.1.7"
matplotlib = "^3.10.3"
numpy = "^2.3.2"
pandas = "^2.3.1"
scikit-learn = "^1.7.1"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120